# ttg

./: .gitignore  makefile  pyproject.toml  readme.md
src/ttg/: colors.py  talk.py
